--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,16 +1,15 @@
-{% load static %}
-{% block footer %}
-			<footer class="footer">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-sm-6">
-							<script>
-								document.write(new Date().getFullYear())
-							</script>© BIOS.</div>
-						<div class="col-sm-6">
-							<div class="text-sm-end d-none d-sm-block">Desarrollado por BIOS</div>
-						</div>
-					</div>
-				</div>
-			</footer>
+{% load static %} {% block footer %}
+<footer class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6">
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>© MULTILAB.</div>
+            <div class="col-sm-6">
+                <div class="text-sm-end d-none d-sm-block">Desarrollado por MULTILAB</div>
+            </div>
+        </div>
+    </div>
+</footer>
 {% endblock footer %}
