--- a/templates/menu/layouts/horizontal/layouts-horizontal.html
+++ b/templates/menu/layouts/horizontal/layouts-horizontal.html
@@ -5,24 +5,21 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>{{title}} | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>{{title}} | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
 
     <!-- jquery.vectormap css -->
-    <link href="{% static 'libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css' %}" rel="stylesheet"
-        type="text/css" />
+    <link href="{% static 'libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css' %}" rel="stylesheet" type="text/css" />
 
     <!-- DataTables -->
-    <link href="{% static 'libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}" rel="stylesheet"
-        type="text/css" />
+    <link href="{% static 'libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
 
     <!-- Responsive datatable examples -->
-    <link href="{% static 'libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css' %}" rel="stylesheet"
-        type="text/css" />
+    <link href="{% static 'libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
 
     <!-- Bootstrap Css -->
     <link href="{% static 'css/bootstrap.min.css' %}" id="bootstrap-style" rel="stylesheet" type="text/css" />
@@ -39,9 +36,7 @@
     <div id="layout-wrapper">
 
 
-        {% include 'partials/hori-header.html' %}
-
-        {% include 'partials/hori-sidebar.html' %}
+        {% include 'partials/hori-header.html' %} {% include 'partials/hori-sidebar.html' %}
 
 
         <!-- ============================================================== -->
@@ -72,7 +67,8 @@
 
                     {% include 'partials/content.html' %}
 
-                </div> <!-- container-fluid -->
+                </div>
+                <!-- container-fluid -->
             </div>
             <!-- End Page-content -->
             {% include 'partials/footer.html' %}
