--- a/templates/pages/authentication/auth-change-password.html
+++ b/templates/pages/authentication/auth-change-password.html
@@ -1,14 +1,13 @@
-{% load static %}
-{% load crispy_forms_tags %}
+{% load static %} {% load crispy_forms_tags %}
 <!doctype html>
 <html lang="en">
 
 <head>
 
     <meta charset="utf-8" />
-    <title>Cambiar contraseña | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>Cambiar contraseña | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -35,10 +34,8 @@
                                         <div class="text-center">
                                             <div>
                                                 <a href="{% url 'dashboard' %}" class="">
-                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="20"
-                                                        class="auth-logo logo-dark mx-auto">
-                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="20"
-                                                        class="auth-logo logo-light mx-auto">
+                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="20" class="auth-logo logo-light mx-auto">
                                                 </a>
                                             </div>
 
@@ -48,20 +45,17 @@
 
                                         <div class="p-2 mt-5">
                                             <form action="" method="POST" enctype="multipart/form-data">
-                                                {% csrf_token %}
-                                                {% for message in messages %}
+                                                {% csrf_token %} {% for message in messages %}
                                                 <div class="alert {{ message.tags }} mb-4" role="alert">
                                                     <strong>{{ message }}</strong>
                                                 </div>
                                                 {% endfor %}
                                                 <div class="auth-form-group-custom mb-4">
-                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i>
-                                                    {{form.old_password|as_crispy_field}}
+                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i> {{form.old_password|as_crispy_field}}
                                                 </div>
 
                                                 <div class="auth-form-group-custom mb-4">
-                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i>
-                                                    {{form.new_password1|as_crispy_field}}
+                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i> {{form.new_password1|as_crispy_field}}
                                                 </div>
                                                 <!-- <p>Your password can’t be too similar to your other personal information. <br>
                                                     Your password must contain at least 8 characters. <br>
@@ -69,23 +63,22 @@
                                                     Your password can’t be entirely numeric.</p> -->
 
                                                 <div class="auth-form-group-custom mb-4">
-                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i>
-                                                    {{form.new_password2|as_crispy_field}}
+                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i> {{form.new_password2|as_crispy_field}}
                                                 </div>
 
                                                 <div class="text-center">
-                                                    <button class="btn btn-primary w-md waves-effect waves-light"
-                                                        type="submit">Cambiar contraseña</button>
+                                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Cambiar contraseña</button>
                                                 </div>
 
                                             </form>
                                         </div>
 
                                         <div class="mt-5 text-center">
-                                            <p>Remember It ?<a href="{% url 'auth-login' %}"
-                                                    class="fw-medium text-primary"> Login</a> </p>
+                                            <p>Remember It ?<a href="{% url 'auth-login' %}" class="fw-medium text-primary"> Login</a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
+                                                <script>
+                                                    document.write(new Date().getFullYear())
+                                                </script> Multilab Agroanalítica
                                             </p>
                                         </div>
                                     </div>
