--- a/templates/pages/authentication/auth-email-verification.html
+++ b/templates/pages/authentication/auth-email-verification.html
@@ -6,9 +6,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Email Verification | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>Email Verification | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -35,10 +35,8 @@
                                         <div class="text-center">
                                             <div>
                                                 <a href="{% url 'dashboard' %}" class="">
-                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="20"
-                                                        class="auth-logo logo-dark mx-auto">
-                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="20"
-                                                        class="auth-logo logo-light mx-auto">
+                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="20" class="auth-logo logo-light mx-auto">
                                                 </a>
                                             </div>
                                         </div>
@@ -54,12 +52,9 @@
                                                     </div>
                                                     <div class="p-2 mt-4">
                                                         <h4>Verify your email</h4>
-                                                        <p class="text-muted">We have sent you verification email <span
-                                                                class="font-weight-semibold">example@abc.com</span>,
-                                                            Please check it</p>
+                                                        <p class="text-muted">We have sent you verification email <span class="font-weight-semibold">example@abc.com</span>, Please check it</p>
                                                         <div class="mt-4">
-                                                            <a href="{% url 'dashboard' %}"
-                                                                class="btn btn-success w-md">Verify email</a>
+                                                            <a href="{% url 'dashboard' %}" class="btn btn-success w-md">Verify email</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -68,10 +63,11 @@
                                         </div>
 
                                         <div class="mt-5 text-center">
-                                            <p>Already have an account ? <a href="{% url 'auth-login' %}"
-                                                    class="fw-medium text-primary"> Login</a> </p>
+                                            <p>Already have an account ? <a href="{% url 'auth-login' %}" class="fw-medium text-primary"> Login</a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
+                                                <script>
+                                                    document.write(new Date().getFullYear())
+                                                </script> Multilab Agroanalítica
                                             </p>
                                         </div>
                                     </div>
