--- a/templates/pages/authentication/auth-lock-screen.html
+++ b/templates/pages/authentication/auth-lock-screen.html
@@ -1,14 +1,13 @@
-{% load static %}
-{% load crispy_forms_tags %}
+{% load static %} {% load crispy_forms_tags %}
 <!doctype html>
 <html lang="en">
 
 <head>
 
     <meta charset="utf-8" />
-    <title>Lock Screen | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>Lock Screen | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -35,10 +34,8 @@
                                         <div class="text-center">
                                             <div>
                                                 <a href="{% url 'dashboard' %}" class="">
-                                                    <img src="{% static 'images/logo-dark.png'%}" alt="" height="20"
-                                                        class="auth-logo logo-dark mx-auto">
-                                                    <img src="{% static 'images/logo-light.png'%}" alt="" height="20"
-                                                        class="auth-logo logo-light mx-auto">
+                                                    <img src="{% static 'images/logo-dark.png'%}" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                                    <img src="{% static 'images/logo-light.png'%}" alt="" height="20" class="auth-logo logo-light mx-auto">
                                                 </a>
                                             </div>
 
@@ -48,8 +45,7 @@
 
                                         <div class="p-2 mt-5">
                                             <form class="" action="" method="POST" enctype="multipart/form-data">
-                                                {% csrf_token %}
-                                                {% for message in messages %}
+                                                {% csrf_token %} {% for message in messages %}
                                                 <div class="alert {{ message.tags }} mb-4" role="alert">
                                                     <strong>{{ message }}</strong>
                                                 </div>
@@ -58,28 +54,26 @@
                                                     <strong id="msg_err"></strong>
                                                 </div>
                                                 <div class="user-thumb text-center mb-5">
-                                                    <img src="{% static 'images/users/avatar-2.jpg'%}"
-                                                        class="rounded-circle img-thumbnail avatar-md" alt="thumbnail">
+                                                    <img src="{% static 'images/users/avatar-2.jpg'%}" class="rounded-circle img-thumbnail avatar-md" alt="thumbnail">
                                                     <h5 class="font-size-15 mt-3">{{heading}}</h5>
                                                 </div>
 
                                                 <div class="mb-3 auth-form-group-custom mb-4">
-                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i>
-                                                    {{form.password|as_crispy_field}}
+                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i> {{form.password|as_crispy_field}}
                                                 </div>
 
                                                 <div class="mt-4 text-center">
-                                                    <button class="btn btn-primary w-md waves-effect waves-light"
-                                                        id="lock-screen-login" type="submit">Unlock</button>
+                                                    <button class="btn btn-primary w-md waves-effect waves-light" id="lock-screen-login" type="submit">Unlock</button>
                                                 </div>
                                             </form>
                                         </div>
 
                                         <div class="mt-5 text-center">
-                                            <p>Not you ? return <a href="{% url 'auth-login' %}"
-                                                    class="fw-medium text-primary"> Log in </a> </p>
+                                            <p>Not you ? return <a href="{% url 'auth-login' %}" class="fw-medium text-primary"> Log in </a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
+                                                <script>
+                                                    document.write(new Date().getFullYear())
+                                                </script> Multilab Agroanalítica
                                             </p>
                                         </div>
                                     </div>
