--- a/templates/pages/authentication/auth-login.html
+++ b/templates/pages/authentication/auth-login.html
@@ -1,14 +1,13 @@
-{% load static %}
-{% load crispy_forms_tags %}
+{% load static %} {% load crispy_forms_tags %}
 <!doctype html>
 <html lang="en">
 
 <head>
 
     <meta charset="utf-8" />
-    <title>Ingreso | Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>Ingreso | Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -35,10 +34,8 @@
                                         <div class="text-center">
                                             <div>
                                                 <a href="{% url 'dashboard' %}" class="">
-                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="60"
-                                                        class="auth-logo logo-dark mx-auto">
-                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="60"
-                                                        class="auth-logo logo-light mx-auto">
+                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="60" class="auth-logo logo-dark mx-auto">
+                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="60" class="auth-logo logo-light mx-auto">
                                                 </a>
                                             </div>
 
@@ -48,8 +45,7 @@
 
                                         <div class="p-2 mt-5">
                                             <form class="form-control">
-                                                {% csrf_token %}
-                                                {% for message in messages %}
+                                                {% csrf_token %} {% for message in messages %}
                                                 <div class="alert {{ message.tags }} mb-4" role="alert">
                                                     <strong>{{ message }}</strong>
                                                 </div>
@@ -65,31 +61,29 @@
                                                 </div>
 
                                                 <div class="mb-3 auth-form-group-custom mb-4">
-                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i>
-                                                    {{ form.password|as_crispy_field }}
+                                                    <i class="ri-lock-2-line auti-custom-input-icon"></i> {{ form.password|as_crispy_field }}
                                                     <!-- <label for="userpassword">Password</label>
                                                         <input type="password" class="form-control" id="userpassword" placeholder="Enter password"> -->
                                                 </div>
 
                                                 <div class="form-check">
-                                                    <input type="checkbox" class="form-check-input"
-                                                        id="customControlInline">
-                                                    <label class="form-check-label"
-                                                        for="customControlInline">Recordarme</label>
+                                                    <input type="checkbox" class="form-check-input" id="customControlInline">
+                                                    <label class="form-check-label" for="customControlInline">Recordarme</label>
                                                 </div>
 
                                                 <div class="mt-4 text-center">
-                                                    <button class="btn btn-primary w-md waves-effect waves-light"
-                                                        type="submit" id="user-login">Ingresar</button>
+                                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit" id="user-login">Ingresar</button>
                                                 </div>
 
-                                                
+
                                             </form>
                                         </div>
 
                                         <div class="mt-5 text-center">
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
+                                                <script>
+                                                    document.write(new Date().getFullYear())
+                                                </script> Multilab Agroanalítica
                                             </p>
                                         </div>
                                     </div>
