--- a/templates/pages/authentication/auth-password-reset-complete.html
+++ b/templates/pages/authentication/auth-password-reset-complete.html
@@ -5,9 +5,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Reseteo completado | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>Reseteo completado | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -34,10 +34,8 @@
                                         <div class="text-center">
                                             <div>
                                                 <a href="{% url 'dashboard' %}" class="">
-                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="20"
-                                                        class="auth-logo logo-dark mx-auto">
-                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="20"
-                                                        class="auth-logo logo-light mx-auto">
+                                                    <img src="{% static 'images/logo-dark.png' %}" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                                    <img src="{% static 'images/logo-light.png' %}" alt="" height="20" class="auth-logo logo-light mx-auto">
                                                 </a>
                                             </div>
                                         </div>
@@ -47,17 +45,14 @@
                                                 <div class="text-center">
                                                     <div class="avatar-md mx-auto">
                                                         <div class="avatar-title rounded-circle bg-light">
-                                                            <i
-                                                                class="mdi-form-textbox-password h1 mb-0 text-primary"></i>
+                                                            <i class="mdi-form-textbox-password h1 mb-0 text-primary"></i>
                                                         </div>
                                                     </div>
                                                     <div class="p-2 mt-4">
                                                         <h4 class="fw-semibold">Cambio exitoso</h4>
-                                                        <p class="text-muted"><strong>All good!</strong> Tu contraseña
-                                                            se ha cambiado correctamente</p>
+                                                        <p class="text-muted"><strong>All good!</strong> Tu contraseña se ha cambiado correctamente</p>
                                                         <div class="mt-4">
-                                                            <a href="{% url 'dashboard' %}"
-                                                                class="btn btn-success">Volver al inicio</a>
+                                                            <a href="{% url 'dashboard' %}" class="btn btn-success">Volver al inicio</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -66,7 +61,9 @@
 
                                         <div class="mt-5 text-center">
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
+                                                <script>
+                                                    document.write(new Date().getFullYear())
+                                                </script> Multilab Agroanalítica
                                             </p>
                                         </div>
                                     </div>
