--- a/templates/pages/utility/pages-404.html
+++ b/templates/pages/utility/pages-404.html
@@ -5,9 +5,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>{{title}} | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>{{title}} | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -29,8 +29,8 @@
                 <div class="col-lg-12">
                     <div class="text-center my-5">
                         <h1 class="fw-bold text-error">4 <span class="error-text">0<img
-                                    src="{% static 'images/error-img.png' %}" alt="error-img" class="error-img"></span>
-                            4</h1>
+                                    src="{% static 'images/error-img.png' %}" alt="error-img" class="error-img"></span> 4
+                        </h1>
                         <h3 class="text-uppercase">Sorry, page not found</h3>
                         <div class="mt-5 text-center">
                             <a class="btn btn-primary waves-effect waves-light" href="{% url 'dashboard' %}">Back to
