--- a/templates/pages/utility/pages-comingsoon.html
+++ b/templates/pages/utility/pages-comingsoon.html
@@ -5,9 +5,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>{{title}} | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>{{title}} | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -34,16 +34,14 @@
                                         <div class="text-center">
                                             <div>
                                                 <a href="{% url 'dashboard' %}" class="">
-                                                    <img src="{% static 'images/logo-dark.png'%}" alt="" height="20"
-                                                        class="auth-logo logo-dark mx-auto">
-                                                    <img src="{% static 'images/logo-light.png'%}" alt="" height="20"
-                                                        class="auth-logo logo-light mx-auto">
+                                                    <img src="{% static 'images/logo-dark.png'%}" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                                    <img src="{% static 'images/logo-light.png'%}" alt="" height="20" class="auth-logo logo-light mx-auto">
                                                 </a>
                                             </div>
 
                                             <h4 class="font-size-18 mt-4">Let's get started with Nazox</h4>
-                                            <p class="text-muted">It will be as simple as Occidental in fact it will be
-                                                Occidental.</p>
+                                            <p class="text-muted">It will be as simple as Occidental in fact it will be Occidental.
+                                            </p>
                                         </div>
 
                                         <div class="p-2 mt-5">
@@ -54,13 +52,11 @@
                                             <div class="row">
                                                 <div class="col">
                                                     <div class="position-relative">
-                                                        <input type="email" class="form-control"
-                                                            placeholder="Enter email address...">
+                                                        <input type="email" class="form-control" placeholder="Enter email address...">
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <button type="submit"
-                                                        class="btn btn-primary w-md waves-effect waves-light">Subscribe</button>
+                                                    <button type="submit" class="btn btn-primary w-md waves-effect waves-light">Subscribe</button>
                                                 </div>
                                             </div>
                                         </div>
