--- a/templates/pages/utility/pages-maintenance.html
+++ b/templates/pages/utility/pages-maintenance.html
@@ -5,9 +5,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>{{title}} | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
+    <title>{{title}} | Dashboard Multilab Agroanalítica </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica  desarrollado por MULTILAB" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -31,18 +31,15 @@
                     <div class="text-center">
                         <div class="mb-5">
                             <a href="{% url 'dashboard' %}" class="">
-                                <img src="{% static 'images/logo-dark.png' %}" alt="" height="20"
-                                    class="auth-logo logo-dark mx-auto">
-                                <img src="{% static 'images/logo-light.png' %}" alt="" height="20"
-                                    class="auth-logo logo-light mx-auto">
+                                <img src="{% static 'images/logo-dark.png' %}" alt="" height="20" class="auth-logo logo-dark mx-auto">
+                                <img src="{% static 'images/logo-light.png' %}" alt="" height="20" class="auth-logo logo-light mx-auto">
                             </a>
                         </div>
 
                         <div class="row justify-content-center">
                             <div class="col-sm-4">
                                 <div class="maintenance-img">
-                                    <img src="{% static 'images/maintenance-bg.png' %}" alt="maintenance-bg"
-                                        class="img-fluid mx-auto d-block">
+                                    <img src="{% static 'images/maintenance-bg.png' %}" alt="maintenance-bg" class="img-fluid mx-auto d-block">
                                 </div>
                             </div>
                         </div>
@@ -60,8 +57,7 @@
                                         </div>
 
                                         <h5 class="font-size-15 text-uppercase mt-4">Why is the Site Down?</h5>
-                                        <p class="text-muted mb-0">There are many variations of passages of
-                                            Lorem Ipsum available, but the majority have suffered alteration.</p>
+                                        <p class="text-muted mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
                                     </div>
                                 </div>
                             </div>
@@ -75,8 +71,7 @@
                                         </div>
                                         <h5 class="font-size-15 text-uppercase mt-4">
                                             What is the Downtime?</h5>
-                                        <p class="text-muted mb-0">Contrary to popular belief, Lorem Ipsum is not
-                                            simply random text. It has roots in a piece of classical.</p>
+                                        <p class="text-muted mb-0">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical.</p>
                                     </div>
                                 </div>
                             </div>
@@ -90,10 +85,7 @@
                                         </div>
                                         <h5 class="font-size-15 text-uppercase mt-4">
                                             Do you need Support?</h5>
-                                        <p class="text-muted mb-0">If you are going to use a passage of Lorem
-                                            Ipsum, you need to be sure there isn't anything embar.. <a
-                                                href="mailto:no-reply@domain.com"
-                                                class="text-decoration-underline">no-reply@domain.com</a></p>
+                                        <p class="text-muted mb-0">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embar.. <a href="mailto:no-reply@domain.com" class="text-decoration-underline">no-reply@domain.com</a></p>
                                     </div>
                                 </div>
                             </div>
