--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -6,18 +6,18 @@
         <div id="sidebar-menu">
             <!-- Left Menu Start -->
             <ul class="metismenu list-unstyled" id="side-menu">
-                <li class="menu-title" key="t-menu">TRANSPLANTE RENAL</li>
+                <li class="menu-title" key="t-menu">Predicciones</li>
                 <li>
                     <a href="{% url 'trasplante' %}" class="waves-effect"> <i class="ri-dashboard-line"></i>
                         <!-- <span class="badge rounded-pill bg-success float-end">3</span> -->
-                        <span key="t-trasplante">Predicción CIC</span>
+                        <span key="t-trasplante">Predicción Aluminio</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="{% url 'eda' %}" class="waves-effect">
                         <!-- <span class="badge rounded-pill bg-success float-end">3</span> --><i class="ri-layout-3-line"></i>
-                        <span key="t-eda">Predicción Aluminio</span>
+                        <span key="t-eda">Predicción CIC</span>
                     </a>
                 </li>
 
